@@ -35,6 +35,7 @@ Unreleased Version 2.3.0-pre
  * Fix: Fall back to the application storage on Android when proper storage is unavailable. This is a patch to Qt. Thanks Sherb for reporting.
  * Fix: Use different zoom levels for hardware and software renderers, depending on which ones work better in the respective modes.
  * Fix: Default hardware renderer to single-buffering, since the system default buffering can add an immense amount of input lag.
+ * Feature: Three new layout presets under View → Layouts. Thanks Ausjamcian, lambda20xx and Scruff for providing them.
 
 2025-10-18 Version 2.3.0-beta.4
  * Fix: Unpremultiply alpha values when exporting to animated WEBP so that partially transparent pixels come out looking correct.
